<resources>

    <string name="gcm_defaultSenderId">65654904915</string>
    <string name="app_name">MedX</string>
    <string name="sign_in_text">Pleace enter your mobile number and\n password to send a 4-digit login PIN to\n your phone by SMS.</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_number">Enter Number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_login_send">Send Login PIN</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="number_blank">mobile number cannot be blank</string>
    <string name="password_blank">password cannot be blank</string>
    <string name="pin_blank">PIN cannot be blank</string>
    <string name="register_text">MedX is only Available for AHPRA registered doctors/ To start using this app, please enter the 6 character registration code you will have received by SMS or fax.</string>
    <string name="register_licence">By proceeding, you agree to accept\nMedX\'s <a STYLE="text-decoration:none" href="https://medxsms.com/terms">terms &amp; conditions</a>.</string>
    <string name="enter_code">Enter code</string>
    <string name="register_validation_link_text">Are you an AHPRA registered doctor,\n but didn\'t receive an invalidation?\nGo to medXsms.com to request one.</string>
    <string name="btn_register_send">Verify Registration Code</string>
    <string name="unregister_number">unregistered mobile number</string>
    <string name="invalid_password">invalid password</string>
    <string name="verify_pin_title">Login PIN sent</string>
    <string name="verify_pin_text">Please enter PIN to sign in. You can also choose the period of inactivity before MedX\n automatically logs out.</string>
    <string name="reset_phone_text">Please enter your mobile number to reset your password. A 4-character reset code will be sent to you by SMS that you can use to enter a new password.</string>
    <string name="logout_time_default">Logout after 1 week inactivity</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_phone">Mobile number</string>
    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="positive_btn">Ok</string>
    <string name="negative_btn">No</string>
    <string name="neutral_btn">Cancel</string>
    <string name="progress_dialog_title">Processing</string>
    <string name="progress_dialog_text">Wait...</string>
    <string name="logout_time_formetter">Logout after %s inactivity</string>
    <string name="invalid_pin">Invalid/Expired Pin</string>
    <string name="register_code_blank">registration code cannot be blank</string>
    <string name="invalid_register_code">Invalid registration code</string>
    <string name="register_terms_of_use_link">By registering with MedX, you are\nagreeing with the MedX <a STYLE="text-decoration:none" href="https://medxsms.com/terms">Terms of Use</a>.</string>
    <string name="specialty">Specialty</string>
    <string name="register_title">MedX is only for AHPRA registered doctors.</string>
    <string name="register_worning_text">Impersonating a doctor is an offence and will be prosecuted to the full extent of the law.</string>
    <string name="name">Name</string>
    <string name="register_surname_warning">Your AHPRA surname cannot be changed</string>
    <string name="mobile">Mobile #</string>
    <string name="ex_mobile">e.g. 04xxxxxxxx</string>
    <string name="hint_password">6+ chars, letters &amp; numbers</string>
    <string name="confirm">Confirm</string>
    <string name="security">Security</string>
    <string name="security_text">In case you forget your password, what street did you grow up on?</string>
    <string name="optional">(optional)</string>
    <string name="name_blank">name cannot be blank</string>
    <string name="confirm_password_not_match">passwords don\'t match</string>
    <string name="correct_error_text">Please correct errors below.</string>
    <string name="error">Error</string>
    <string name="register_error_text">Your details provided do not match the AHPRA register. Please check your information before trying again.</string>
    <string name="register_invalid_number">Mobile number had already taken, please choose another phone number</string>
    <string name="register_invalid_user">Username had already taken, please choose another username</string>
    <string name="register_invalid_verified">A doctor is already registered with the details you provided, please contact administrator of MedX before trying again.</string>
    <string name="logout">Log Out</string>
    <string name="invalid_number">invalid mobile number</string>
    <string name="small_password">password too weak</string>
    <string name="invalid_session">Invalid session</string>
    <string name="sort">Sort</string>
    <string name="az">A-Z</string>
    <string name="distance_from">Distance from</string>
    <string name="postcode">Postcode</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="location">Locations</string>
    <string name="add_office_location">Add Office Location</string>
    <string name="add_location">ADD LOCATION</string>
    <string name="street">Street</string>
    <string name="office_n">Office #</string>
    <string name="street_address">Street address</string>
    <string name="phone_number">Phone number</string>
    <string name="save">SAVE</string>
    <string name="adress_empty">Adress is empty</string>


    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
    <string name="GPSAlertDialogMessage">GPSAlertDialogMessage</string>
    <string name="action_settings">Settings</string>
    <string name="adress_invalid">Address could not found/invalid. Please review</string>
    <string name="invalid_postcode">Invalid postcode</string>
    <string name="empty_search_list">No matches, please extend search criteria</string>
    <string name="chat">Chat</string>
    <string name="block_user">Block User</string>
    <string name="unblock_user">Unblock User</string>
    <string name="offices">Offices</string>
    <string name="logout_title">Logout</string>
    <string name="logout_text">Logout</string>
    <string name="about_hint"><font size="14">Practice description (optional)</font></string>
    <string name="location_hint">Office details help other doctors find you by location.</string>
    <string name="surname_input_info">Your AHPRA surname cannot be changed</string>
    <string name="settings_note_text">Note: for security reasons, all messages older than seven(7) days are authomatically destroyed.</string>
    <string name="send">Send</string>
    <string name="verify_pin">Verify PIN</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify">Verify</string>
    <string name="register">Register</string>
    <string name="thank_you">Thank You</string>
    <string name="thank_you_text1">Your MedX registration request has been received. You should receive a SMS confirmation of receipt</string>
    <string name="think_you_text2">Please expect a phone call shortly from our support team to verify your derails and complete your registration.</string>
    <string name="warning">Warning</string>
    <string name="enter_all_fields">Please enter all fields</string>
    <string name="invalid_number_text">Invalid phone number, please enter again</string>
    <string name="attach_image">Attach Image</string>
    <string name="before_generate_key_text">Are you sure you wish to log in from a new device? Since all messages are device-to-device encrypted, all previously unreceived messages will be lost.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="proceed">Proceed</string>
    <string name="block">Block</string>
    <string name="confirm_delete_conversation">Are you sure you wish to delete the conversation with %s?</string>
    <string name="confirm_block_user">Are you sure you wish to block this user from sending you messages?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_medx_not_installed">This user has not yet installed MedX, and will be alerted by fax about unread messages.</string>
    <string name="note">Note:</string>
    <string name="SMSinvation">%s does not have MedX installed on their phone. MedX can send them an installation code by SMS if you know their mobile number, otherwise skip this step and MedX will send a code to their registered fax.</string>
    <string name="skip">Skip>></string>
    <string name="send_sms">Send SMS</string>
    <string name="error_invite">Could not invite the doctor. Please try again later!</string>
    <string name="error_invite_verified">The doctor has already been verified. Please pull to refresh the search!</string>
    <string name="error_invite_phone_used">The phone has already been used by another doctor!</string>
    <string name="sending_invitation">Sending invitation</string>
    <string name="please_wait">Generating Encryption Keys.\n(This may take up to a minute.)</string>
    <string name="updating">Updating...</string>
    <string name="communication_error">Communication with server failed.\nPlease check your network connection.</string>
    <string name="confirm_delete_location">Are you sure you wish to delete this address?</string>
    <string name="long_message">It exceeds maximum 500 characters.</string>
    <string name="connection_error">Communication with server failed.\nPlease check your network connection.</string>

    <string name="coult_not_be_done_try_later">It could not be done. Please try again later!</string>
    <string name="no_info">No information</string>
    <string name="auto_destored">Automatically Destroyed</string>


</resources>
