<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView4"
        android:layout_below="@+id/relativeLayout2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linearLayout"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/sign_in_text"
                    android:layout_marginTop="20dp"
                    android:id="@+id/textView3"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/mobile_number"
                    android:id="@+id/textView4"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="32dp" />


                <EditText
                    style="@style/RectEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_number"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:id="@+id/number"
                     />

                <TextView
                    android:id="@+id/tvErrorPhone"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/invalid_number"
                    android:textColor="@color/colorAccent"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/password"
                    android:id="@+id/textView5"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="5dp" />

                <EditText
                    style="@style/RectEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:singleLine="true"
                    android:id="@+id/password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tvErrorPassword"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/invalid_password"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:gravity="center"
                    android:textSize="@dimen/button_text_size"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:text="@string/btn_login_send"
                    android:id="@+id/send"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:background="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:id="@+id/linearLayout"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        style="@style/CustomActionBar"
        android:id="@+id/relativeLayout2">

        <ImageView
            android:layout_width="@dimen/action_bar_size"
            android:layout_height="@dimen/action_bar_size"
            android:id="@+id/close"
            android:src="@mipmap/back_arrow"
            android:tint="#ffffff"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:text="@string/sign_in"
            android:id="@+id/title"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/action_bar_size"
            android:layout_marginRight="@dimen/action_bar_size" />
    </RelativeLayout>

    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgot_password_text"

        android:textColorLink="@color/colorAccent"
        android:id="@+id/tvForgot"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>