<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        style="@style/CustomActionBar"
        android:id="@+id/relativeLayout2">

        <ImageView
            android:layout_width="@dimen/action_bar_size"
            android:layout_height="@dimen/action_bar_size"
            android:id="@+id/close"
            android:src="@mipmap/back_arrow"
            android:tint="#ffffff"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:text="@string/verify"
            android:id="@+id/title"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/action_bar_size"
            android:layout_marginRight="@dimen/action_bar_size" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_below="@+id/relativeLayout2"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_above="@+id/relativeLayout3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/register_text"
            android:id="@+id/textView2"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/register_licence"
            android:id="@+id/textView6"
            android:gravity="center"
            android:layout_marginBottom="16dp" />



            <EditText
                style="@style/RectEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_code"
                android:id="@+id/code"
                android:gravity="center"
                android:lines="1"
                android:layout_marginTop="16dp"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_marginTop="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/registerCodeNotify"
                android:text="@string/invalid_register_code"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginBottom="16dp"
                android:gravity="center" />

            <TextView
                android:gravity="center"
                android:textSize="@dimen/button_text_size"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/btn_register_send"
                android:id="@+id/send"
                android:textColor="@color/white"
                android:background="@color/colorAccent" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:id="@+id/relativeLayout3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/register_validation_link_text"
            android:id="@+id/textView12"
            android:autoLink="web"
            android:textColorLink="@color/colorAccent"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>
    </RelativeLayout>

</RelativeLayout>