<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/thank_you"
            android:id="@+id/textView35"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/signIn"
            android:layout_below="@+id/textView35"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/thank_you_text1"
                android:id="@+id/textView37"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/think_you_text2"
                android:id="@+id/textView39"
                android:gravity="center"
                android:layout_marginBottom="32dp" />
        </LinearLayout>

        <TextView
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:text="@string/sign_in"
            android:id="@+id/signIn"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"></LinearLayout>

</LinearLayout>